<resources>
    <string name="app_name">Chat App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_started">Get started</string>
    <string name="welcome">Welcome!</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone number</string>
    <string name="contacts">Contacts</string>
    <string name="chats">Chats</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="change_personal_information">Change personal information</string>
    <string name="save">Save</string>
    <string name="personal_information">Personal information</string>
    <string name="choose_colon">Choose:</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="empty">Empty</string>
    <string name="create_chat">Create chat</string>
    <string name="create_group">Create group</string>
    <string name="chat_name">Chat name</string>
    <string name="input">Input..</string>
</resources>