<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ChangePersonalInfoFragment">

    <TextView
        style="@style/HeadingText"
        android:text="@string/personal_information"
        android:layout_marginBottom="@dimen/middle_margin"
        app:layout_constraintBottom_toTopOf="@+id/edit_texts_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!--EDIT TEXTS-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/edit_texts_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!--FIRST NAME-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_first_name"
            style="@style/RegisterEditText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="25"
                android:hint="@string/first_name"/>

        </com.google.android.material.textfield.TextInputLayout>


        <!-- LAST NAME-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_last_name"
            style="@style/RegisterEditText"
            app:layout_constraintTop_toBottomOf="@+id/til_first_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="25"
                android:hint="@string/last_name"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- PHONE NUMBER-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_phone_number"
            style="@style/RegisterEditText"
            app:layout_constraintTop_toBottomOf="@+id/til_last_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="25"
                android:inputType="phone"
                android:hint="@string/phone_number"/>

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <!--BUTTON SAVE-->
    <Button
        android:id="@+id/btn_save"
        style="@style/ButtonGeneral"
        android:text="@string/save"
        android:layout_marginBottom="@dimen/normal_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>