<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.SignUpFragment">

    <TextView
        android:id="@+id/tv_sign_up_heading"
        android:text="@string/sign_up"
        android:layout_marginTop="@dimen/side_normal_margin"
        style="@style/HeadingText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <!--FIRST NAME-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_first_name"
        style="@style/RegisterEditText"
        android:layout_marginTop="@dimen/middle_margin"
        app:startIconDrawable="@drawable/ic_person"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_up_heading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="25"
            android:hint="@string/first_name"/>

    </com.google.android.material.textfield.TextInputLayout>


    <!--LAST NAME-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_last_name"
        style="@style/RegisterEditText"
        app:startIconDrawable="@drawable/ic_person"
        app:layout_constraintTop_toBottomOf="@id/til_first_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="25"
            android:hint="@string/last_name"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!--LAST NAME-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_phone_number"
        style="@style/RegisterEditText"
        app:startIconDrawable="@drawable/ic_phone"
        app:layout_constraintTop_toBottomOf="@id/til_last_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLength="25"
            android:hint="@string/phone_number"/>

    </com.google.android.material.textfield.TextInputLayout>


    <!--EMAIL-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        style="@style/RegisterEditText"
        app:startIconDrawable="@drawable/ic_email"
        app:layout_constraintTop_toBottomOf="@id/til_phone_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!--PASSWORD-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style="@style/RegisterEditText"
        app:startIconDrawable="@drawable/ic_lock"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@+id/til_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:hint="@string/password"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!--BUTTON SIGN UP-->
    <Button
        android:id="@+id/btn_sign_up"
        style="@style/ButtonGeneral"
        android:text="@string/sign_up"
        android:layout_marginTop="@dimen/middle_margin"
        app:layout_constraintTop_toBottomOf="@+id/til_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>